src/objects/ExpoUser__c.object
<CustomObject>
    <fields>
        <fullName>ActivationFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>活性化FLG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdministratorFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>管理者フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangePasswordFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>パスワードが忘れる場合、該当フラグを変更される</description>
        <label>パスワードリセットフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>メール</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExpoOrgInfoRef__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>組織情報参照</description>
        <label>Expo組織情報</label>
        <referenceTo>ExpoOrgInfo__c</referenceTo>
        <relationshipLabel>Expoユーザ</relationshipLabel>
        <relationshipName>ExpoOrgInfoRefe</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>ユーザ有効</inlineHelpText>
        <label>有効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PassWord__c</fullName>
        <label>パスワード</label>
        <length>127</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>電話</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PwdResetSendMalFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>該当項目を変更されると、自動ユーザへ送信を行う</description>
        <label>パスワードリセット送信</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShopCode__c</fullName>
        <label>店舗コード</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteUrl__c</fullName>
        <formula>$Setup.CommDefine__c.SiteRootUrl__c</formula>
        <label>サイトURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>TokenId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>例：name@yourcompany.com</inlineHelpText>
        <label>ユーザ名</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserStatusCal__c</fullName>
        <formula>IF( ActivationFlg__c &lt;&gt; TRUE, &apos;未ログイン&apos;, IF(IsActive__c= FALSE, &apos;無効&apos;, &apos;有効&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>状態</label>
        <type>Text</type>
    </fields>
    <label>Expoユーザ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExpoOrgInfoRef__c</columns>
        <columns>PassWord__c</columns>
        <columns>ChangePasswordFlg__c</columns>
        <columns>Email__c</columns>
        <columns>UserName__c</columns>
        <columns>ShopCode__c</columns>
        <columns>Phone__c</columns>
        <columns>Fax__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>氏名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>